log
Tue, May 13, 2025 12:44:18 PM: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
Compilation failed
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:68:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
3f0e54c
Tue, May 13, 2025 12:45:19 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
2ac9eea
Tue, May 13, 2025 12:53:38 PM: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  2|4
total_score: 15/70
ddb0476
Tue, May 13, 2025 12:54:41 PM: 
 sudoku.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:59:27: error: unused variable 'new_node' [-Werror=unused-variable]
                     Node* new_node = copy(n);
                           ^~~~~~~~
cc1.exe: all warnings being treated as errors
0d0d869
Tue, May 13, 2025 12:55:02 PM: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
5d55f9c
Tue, May 13, 2025 12:59:09 PM: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  0|5
total_score: 0/70
affeda9
Tue, May 13, 2025  1:14:27 PM: 
 sudoku.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
bb2ea02
Tue, May 13, 2025  1:16:13 PM: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
1914ccc
Tue, May 13, 2025  1:18:31 PM: 
 sudoku.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  6|2
total_score: 45/70
c2c21ed
Sat, May 17, 2025  8:00:43 PM: 
 sudoku.c | 115 ---------------------------------------------------------------
 1 file changed, 115 deletions(-)
Compilation failed
test.c: In function 'adj_test1':
test.c:59:21: error: implicit declaration of function 'read_file' [-Werror=implicit-function-declaration]
     Node* initial = read_file("s12a.txt");
                     ^~~~~~~~~
test.c:59:21: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
test.c:62:17: error: implicit declaration of function 'get_adj_nodes' [-Werror=implicit-function-declaration]
     List* adj = get_adj_nodes(initial);
                 ^~~~~~~~~~~~~
test.c:62:17: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
test.c:95:9: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     adj = get_adj_nodes(initial);
         ^
test.c: In function 'test_isvalid':
test.c:108:21: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
     Node* initial = read_file("s12a.txt");
                     ^~~~~~~~~
test.c:112:9: error: implicit declaration of function 'is_valid' [-Werror=implicit-function-declaration]
     if(!is_valid(initial)){
         ^~~~~~~~
test.c: In function 'test_mod_adj':
test.c:152:21: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
     Node* initial = read_file("s12a.txt");
                     ^~~~~~~~~
test.c:155:17: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
     List* adj = get_adj_nodes(initial);
                 ^~~~~~~~~~~~~
test.c: In function 'test_isfinal':
test.c:178:21: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
     Node* initial = read_file("s12a.txt");
                     ^~~~~~~~~
test.c:180:8: error: implicit declaration of function 'is_final' [-Werror=implicit-function-declaration]
     if(is_final(initial)){
        ^~~~~~~~
test.c: In function 'test_dfs':
test.c:203:21: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
     Node* initial = read_file("s12a.txt");
                     ^~~~~~~~~
test.c:206:19: error: implicit declaration of function 'DFS' [-Werror=implicit-function-declaration]
     Node* final = DFS(initial, &cont);
                   ^~~
test.c:206:19: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
test.c:226:13: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     initial = read_file("s12a.txt");
             ^
test.c:230:11: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     final = DFS(initial, &cont);
           ^
cc1.exe: all warnings being treated as errors
f9b8460
Sat, May 17, 2025  8:01:12 PM: 
 sudoku.c | 116 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 116 insertions(+)
 tests:  6|2
total_score: 45/70
78d88db
Sat, May 17, 2025  8:02:05 PM: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  6|2
total_score: 45/70
9dc9665
Sat, May 17, 2025  8:02:30 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 55/70
97e0170
Sat, May 17, 2025  8:04:14 PM: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:123:9: error: invalid use of void expression
         Node* current = (Node*) popFront(stack);
         ^~~~
sudoku.c:123:15: error: unused variable 'current' [-Werror=unused-variable]
         Node* current = (Node*) popFront(stack);
               ^~~~~~~
cc1.exe: all warnings being treated as errors
209dc8d
Sat, May 17, 2025  8:09:43 PM: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:123:15: error: unused variable 'current' [-Werror=unused-variable]
         Node* current = front(stack);
               ^~~~~~~
cc1.exe: all warnings being treated as errors
f503c6b
Sat, May 17, 2025  8:10:14 PM: 
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:123:15: error: unused variable 'current' [-Werror=unused-variable]
         Node* current = front(stack);
               ^~~~~~~
cc1.exe: all warnings being treated as errors
8a06e17
